--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="card-container">
 		<div class="text-container">
-				<h1 classname="heading">Get <mark>insights</mark> that help your business grow.</h1>
+				<h1 class="heading">Get <mark>insights</mark> that help your business grow.</h1>
 				<p>
 						Discover the benefits of data analytics and make better decisions regarding revenue, customer
 						experience, and overall efficiency.
